Added FontAwesome CSS

--- a/react-video-app/public/index.html
+++ b/react-video-app/public/index.html
@@ -7,6 +7,7 @@
 		<meta name="theme-color" content="#000000"/>
 		<meta name="description" content="Media Manager App"/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 		<title>Media Manager App</title>
 	</head>
